<resources>
    <string name="app_name">DailyExpense</string>
    <string name="action_settings">Settings</string>
    <string name="one">ONE</string>
    <string name="two">TWO</string>
    <string name="three">THREE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_transaction">AddTransaction</string>
    <string name="spend">Spend</string>
    <string name="save">SAVE</string>
    <string name="Rs">\u20B9</string>
    <string name="cash">Cash</string>
    <string name="cash_remaining">Remaining:</string>
    <string name="thousand">1000</string>
    <string name="sevenhundred">700</string>
    <string name="threehundred">300</string>
    <string name="Category">Category</string>

</resources>
