<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.dailyexpense.AddTransactionFragment"
    tools:showIn="@layout/activity_add_transaction">

    <RelativeLayout
        android:id="@+id/firstfrag"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/textColorPrimary"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <EditText
            android:id="@+id/editText_spend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/spend" />

        <EditText
            android:id="@+id/editText_Category"
            android:hint="@string/Category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_spend"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/editText_Date"
            android:hint="Date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_Category"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_gravity="left|bottom"
            android:layout_marginLeft="49dp"
            android:layout_marginStart="49dp"
            android:layout_marginBottom="78dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SHOW"
            android:id="@+id/button_show"
            android:layout_alignTop="@+id/button_save"
            android:layout_toRightOf="@+id/button_save"
            android:layout_toEndOf="@+id/button_save"
            android:layout_marginLeft="49dp"
            android:layout_marginStart="49dp" />



    </RelativeLayout>

</RelativeLayout>
